@@ -54,7 +54,7 @@
     </script>
 
     <p class="add">
-        <a class="button bicolor button--icon" id="id_{{ formset.prefix }}-ADD" value="Add">{% icon name="plus" wrapped=1 %}{% block add_button_label %}{% endblock %}</a>
+        <button class="button bicolor button--icon" id="id_{{ formset.prefix }}-ADD" value="Add" type="button">{% icon name="plus" wrapped=1 %}{% block add_button_label %}{% endblock %}</button>
     </p>
 
     <script>
