@@ -20,6 +20,7 @@ Changelog
  * Unify the styling of delete/destructive button styles across the admin interface (Paarth Agarwal)
  * Adopt new designs and unify the styling styles for `.button-secondary` buttons across the admin interface (Paarth Agarwal)
  * Refine designs for disabled buttons throughout the admin interface (Paarth Agarwal)
+ * Update expanding formset add buttons to use `button` not link for behaviour (LB (Ben) Johnston)
  * Fix: Prevent `PageQuerySet.not_public` from returning all pages when no page restrictions exist (Mehrdad Moradizadeh)
  * Fix: Ensure that duplicate block ids are unique when duplicating stream blocks in the page editor (Joshua Munn)
  * Fix: Revise colour usage so that privacy & locked indicators can be seen in Windows High Contrast mode (LB (Ben Johnston))
